--- a/pages/education.html
+++ b/pages/education.html
@@ -1,120 +1,124 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta name='viewport'
-      content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
-    <title>Conservation</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/styles.css" />
+  <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0' />
+  <title>Conservation</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/styles.css" />
 </head>
+
 <body>
-        <!---Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/../index.html">Herpetarium</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-        </button>
+  <!---Navbar-->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="/../index.html">Herpetarium</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-            <a class="nav-link" href="/../index.html">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="/pages/schedule.html">Visit</a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link" href="/pages/animals.html">Animals</a>
-            </li>
-            <li class="nav-item active">
-            <a class="nav-link" href="/pages/education.html">Conservation</a>
-            </li>
-        </ul>
-        </div>
-    </nav>
-
-    <div class="heading" style="background-image: url('/images/background.jpg');">
-        <br />
-        <h1 id="wordsOnImage" style="text-align: center;">CONSERVATION EFFORTS</h1>
-        <br />
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="/../index.html">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/schedule.html">Visit</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/animals.html">Animals</a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="/pages/education.html">Conservation</a>
+        </li>
+      </ul>
     </div>
+  </nav>
 
-    <div class="threatened-species">
-        <form>
-            <label>Choose a region</label>
-            <input id="regionInput" type="text" value=""></input><br/>
-            <input id="regionSubmit" type="submit" value="Submit"></input>
-        </form>
-        <div id="threatened"></div>
+  <div class="heading" style="background-image: url('/images/background.jpg');">
+    <br />
+    <h1 id="wordsOnImage" style="text-align: center;">CONSERVATION EFFORTS</h1>
+    <br />
+  </div>
+
+  <div class="threatened-species">
+    <form>
+      <label>Choose a region</label>
+      <input id="regionInput" type="text" value=""></input><br />
+      <input id="regionSubmit" type="submit" value="Submit"></input>
+    </form>
+    <div id="threatened"></div>
+  </div>
+
+  <hr />
+
+  <div class="conservation-heading">
+    <div class="heading-img" style="background-image:url('/images/sea_turtle_baby.jpg')"></div>
+    <div class="heading-text" style="top:15%; width:100%">
+      <h1 style="font-size:7vw;">SEA TURTLE CONSERVATION</h1>
     </div>
+  </div>
 
-    <div class="conservation-heading">
-        <div class="heading-img" style="background-image:url('/images/sea_turtle_baby.jpg')"></div>
-        <div class="heading-text" style="top:15%; width:100%">
-          <h1 style="font-size:7vw;">SEA TURTLE CONSERVATION</h1>
-        </div>
+  <div class="row animal">
+    <div class="conservation-column">
+      <h2>Why are sea turtles endangered?</h2>
+      <h6>The IUCN has identified five major contributers to sea turtle endangerment:</h6>
+      <ul>
+        <li><b>Fisheries: </b>Fishing can negatively impact the food web, destroy sea turtle habitats, and kill sea turtles that get entangled in nets.</li>
+        <li><b>Hunting: </b>Sea turtles and their eggs are hunted throughout the world.</li>
+        <li><b>Development: </b>Development such as seafloor dredging and coastal construction alters and even destroys sea turtle habitats and nesting areas.</li>
+        <li><b>Pollution: </b>Sea turtles can die from ingesting or being tangled in pollutants. Light pollution disrupts nesting patterns and leads baby sea
+          turtles away from the sea.</li>
+        <li><b>Climate Change: </b>Climate change will cause damage to sea turtle habitats and populations.</li>
+      </ul>
+      <p style="font-size:10px;"><i>Sources: Caribbean Conservation Corporation and Todd Steiner, Sea Turtle Restoration Project</i></p>
     </div>
-
-    <div class="row animal">
-        <div class="conservation-column">
-          <h2>Why are sea turtles endangered?</h2>
-          <h6>The IUCN has identified five major contributers to sea turtle endangerment:</h6>
-          <ul>
-            <li><b>Fisheries: </b>Fishing can negatively impact the food web, destroy sea turtle habitats, and kill sea turtles that get entangled in nets.</li>
-            <li><b>Hunting: </b>Sea turtles and their eggs are hunted throughout the world.</li>
-            <li><b>Development: </b>Development such as seafloor dredging and coastal construction alters and even destroys sea turtle habitats and nesting areas.</li>
-            <li><b>Pollution: </b>Sea turtles can die from ingesting or being tangled in pollutants. Light pollution disrupts nesting patterns and leads baby sea
-            turtles away from the sea.</li>
-            <li><b>Climate Change: </b>Climate change will cause damage to sea turtle habitats and populations.</li>
-          </ul>
-          <p style="font-size:10px;"><i>Sources: Caribbean Conservation Corporation and Todd Steiner, Sea Turtle Restoration Project</i></p>
-        </div>
-        <div class="conservation-column">
-          <img src="/images/sea_turtle_birds_eye.jpg">
-        </div>
+    <div class="conservation-column">
+      <img src="/images/sea_turtle_birds_eye.jpg">
     </div>
-    <hr class=sep-animals>
+  </div>
+  <hr class=sep-animals>
 
-    <div class="row animal">
-        <div class="conservation-column">
-            <img src="/images/sea_turtle_baby_2.jpg">
-        </div>
-        <div class="conservation-column">
-            <br>
-            <h2>Do Your Part</h2>
-            <h6>Human activity is the main cause of preventable sea turtle deaths. 
-                Here are some things you can do to help protect our flippery friends:</h6>
-            <ul>
-            <li>Participate in the Highland Herpetarium's annual beach cleanup. Every summer, we get together for a day of family-friendly service.
-                Specific dates and times will be posted on our <a href="schedule.html">Events Page</a>.
-            </li>
-            <li>Clean up after yourself. Do your part to leave the beach cleaner than when you came. Look out for debris that could 
-                entangle or be eaten by sea turtles. Fill in holes and kick down sand castles before you leave, as they can become 
-                obstacles for baby sea turtle trying to reach the ocean.
-            </li>
-            <li>Turn off or take down lights that are visible from the ocean. Inland lights can disorient baby sea turtles, and they can die if they 
-                crawl away from the ocean.
-            </li>
-            <li>Raise awareness. Join a campain in your city to educate others on sea turtle conservation. Write to your representatives in Congress
-                encouraging them to support legislation that protects sea habitats.
-            </li>
-          </ul>
-        </div>
+  <div class="row animal">
+    <div class="conservation-column">
+      <img src="/images/sea_turtle_baby_2.jpg">
     </div>
-    <hr class=sep-animals>
+    <div class="conservation-column">
+      <br>
+      <h2>Do Your Part</h2>
+      <h6>Human activity is the main cause of preventable sea turtle deaths.
+        Here are some things you can do to help protect our flippery friends:</h6>
+      <ul>
+        <li>Participate in the Highland Herpetarium's annual beach cleanup. Every summer, we get together for a day of family-friendly service.
+          Specific dates and times will be posted on our <a href="schedule.html">Events Page</a>.
+        </li>
+        <li>Clean up after yourself. Do your part to leave the beach cleaner than when you came. Look out for debris that could
+          entangle or be eaten by sea turtles. Fill in holes and kick down sand castles before you leave, as they can become
+          obstacles for baby sea turtle trying to reach the ocean.
+        </li>
+        <li>Turn off or take down lights that are visible from the ocean. Inland lights can disorient baby sea turtles, and they can die if they
+          crawl away from the ocean.
+        </li>
+        <li>Raise awareness. Join a campain in your city to educate others on sea turtle conservation. Write to your representatives in Congress
+          encouraging them to support legislation that protects sea habitats.
+        </li>
+      </ul>
+    </div>
+  </div>
+  <hr class=sep-animals>
 
-    
 
-    <!--Footer-->
-    <footer>
-        <div class=" company-name">&#169; HIGHLAND HERPETARIUM</div>
-        <div class="github-info"><a href="https://github.com/louisadayton/creative_project_1">GITHUB: Louisa Dayton and Briana King</a></div>
-    </footer>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <!--Footer-->
+  <footer>
+    <div class=" company-name">&#169; HIGHLAND HERPETARIUM</div>
+    <div class="github-info"><a href="https://github.com/louisadayton/creative_project_1">GITHUB: Louisa Dayton and Briana King</a></div>
+  </footer>
 
-    <script src="/pages/conservation.js"></script>  
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+  <script src="/pages/conservation.js"></script>
 </body>
+
 </html>
